--- a/src/pages/Experience.css
+++ b/src/pages/Experience.css
@@ -1,7 +1,6 @@
 .experience {
     color: white;
-    display: flex;
-    flex-direction: column;
+    /* display: flex; */
 }
 
 h3 {
@@ -20,9 +19,12 @@ a.resume:hover {
     transform: scale(1.1);
 }
 
-.column {
-    width: 33%;
-    float: left;
+
+@media (min-width: 768px) {
+    .experience-container {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
 }
 
 .row {
